Fix up header and links alignment

--- a/style.css
+++ b/style.css
@@ -3,12 +3,19 @@
     color: white;
     font-size: 24px;
     font-weight: 800;
-    display: flex; 
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 100px 0px 100px;
 }
 
-li {
+.left-logo {
+    align-self: center;
+}
+
+.right-links {
     display: inline-flex;
     list-style: none;
+    gap: 16px;
 }
 
 
